# spring-support-parent-starter

./: .cursorrules  .flattened-pom.xml  .gitattributes  .gitignore  FixAllBom.java  PROJECT_ANALYSIS.md  README.en.md  README.md  RemoveAllBom.java  RemoveBom.java  application-example.properties  application-example.yml  compile-output.txt  pom.xml  remove_all_bom.java  remove_bom_queue.java  控制台面板重构分步任务清单.md  控制台面板重构总任务清单.md  支付管理pay.code-workspace  数据同步sync.code-workspace  编译任务清单.md  编译缺陷清单.md
.codex/: smoke-sync-api.ps1
docs/: server-ai-integration-checklist.md  server-ai-integration-report-template.md  server-ai-integration-report.md  server-remote-proxy-docker-blocker.md  server-remote-proxy-env-report.md  server-remote-proxy-host-verify.md  server-runtime-test-checklist.md  server-soft-28-task-plan.md
scripts/: mvn-java25.cmd  mvn-java25.ps1  run-payment-test-app.ps1  system-ui-inspect.spec.js
spring-support-ai-starter/: .flattened-pom.xml  AGENT_REFACTOR_CHECKLIST.md  README.md  pom.xml  测试报告.md  缺陷清单.md
spring-support-aliyun-starter/: .flattened-pom.xml  pom.xml
spring-support-bom/: .flattened-pom.xml  pom.xml
spring-support-circuit-breaker-starter/: README.md  pom.xml
spring-support-common-starter/: .flattened-pom.xml  API注解测试报告.md  README.md  effective.xml  pom.xml
spring-support-rust-server-starter/rust/rust-http-server/: Cargo.toml  build-all.ps1  build-all.sh
spring-support-rust-server-starter/rust/rust-http-server/.cargo/: config.toml
spring-support-rust-server-starter/rust/rust-http-server/src/: ipc.rs  lib.rs  protocol.rs  server.rs
(+5063 files in other folders)
