[package]
name = "rust-http-server"
version = "1.0.0"
edition = "2021"
authors = ["CH"]
description = "High-performance HTTP server for Spring Boot, replacing Tomcat/Undertow"

[lib]
name = "rust_http_server"
crate-type = ["cdylib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# MessagePack serialization
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI arguments
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1.5"
dashmap = "5.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
